# HPCPerfStats

./: .gitignore  .yapf  Dockerfile  README.md  TESTING.md  docker-compose.yaml.example  docker-compose.yml  docker-instructions.txt  hpcperfstats.ini  hpcperfstats.ini.example  patch  pyproject.toml  requirements.txt  run_tests.py  setup.py
docs/: attributes-definition.md  design-document.md
hpcperfstats/: conf_parser.py  conftest.py  django_bootstrap.py  jobstats_cli.py  listend.py  print_utils.py  progress.py  shutdown_utils.py
hpcperfstats/analysis/metrics/: __init__.py  metrics.py  update_metrics.py
hpcperfstats/analysis/plot/: __init__.py  devplot.py  heatmap.py  roofline.py  summaryplot.py
hpcperfstats/dbload/: date_utils.py  sacct_gen.py  sync_acct.py  sync_timedb.py  sync_timedb_archive.py  sync_timedb_archive_helpers.py  sync_timedb_parsing.py  tar_utils.py
hpcperfstats/dbload/hardware_counter_maps/: amd64_pmc.py  intel_process.py
hpcperfstats/dbload/test_utils/: query_timescaledb.py  stats_processor.py
hpcperfstats/site/: manage.py
hpcperfstats/site/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
hpcperfstats/site/frontend/src/: App.jsx  Layout.jsx  api.js  index.css  main.jsx
hpcperfstats/site/frontend/src/components/: BokehEmbed.jsx  ExtendedSearch.jsx  HistogramThumbnails.jsx  LoadingMessage.jsx
hpcperfstats/site/frontend/src/pages/: AdminMonitor.jsx  HostDetail.jsx  JobDetail.jsx  JobList.jsx  JobMonitor.jsx  Search.jsx  TypeDetail.jsx
hpcperfstats/site/frontend/src/utils/: formatDateTime.js
hpcperfstats/site/hpcperfstats_site/: cache.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
hpcperfstats/site/hpcperfstats_site/static/frontend/: index.html
hpcperfstats/site/hpcperfstats_site/static/frontend/.vite/: manifest.json
hpcperfstats/site/hpcperfstats_site/static/frontend/assets/: index-COF1Qo3F.css  index-C_I0gKWY.js
hpcperfstats/site/hpcperfstats_site/templates/hpcperfstats_site/: base.html
hpcperfstats/site/machine/: api.py  api_urls.py  cache_utils.py  models.py  oauth2.py  query_utils.py  renderers.py  serializers.py  update_xalt.py  urls.py  views.py
hpcperfstats/site/machine/migrations/: 0001_initial.py  0002_add_read_only_user.py  0003_create_table_index.py  0004_job_data_date_indexes.py  0005_remove_unused_indexes.py  0006_add_query_indexes.py  0007_metrics_data_metric_index.py  0008_apikey.py  0009_apikey_is_staff.py  0010_alter_apikey_options_alter_job_data_end_time_and_more.py  0011_composite_indexes.py  0012_update_host_data_compression_policy.py  0013_host_data_composite_primary_key.py
hpcperfstats/site/machine/templates/machine/: admin_monitor.html  index.html  job_data_detail.html  proc_detail.html  search.html  type_detail.html
hpcperfstats/site/machine/templates/registration/: login.html  login_prompt.html
hpcperfstats/site/machine/tests/: __init__.py  conftest.py  test_analysis_utils.py  test_jid_table.py  test_job_list_histograms.py  test_metrics.py  test_orm_migration.py  test_query_utils.py  test_update_metrics.py
hpcperfstats/site/xalt/: models.py
hpcperfstats/site/xalt/templates/admin/: base_site.html
hpcperfstats/tests/: __init__.py  test_analysis_utils.py  test_cache_utils.py  test_conf_parser.py  test_date_utils.py  test_dbload_parsing.py  test_progress.py  test_sync_timedb.py  test_sync_timedb_archive.py
monitor/: configure.ac  hpcperfstats.spec
monitor/src/: Makefile.am  cpuid.c  cpuid.h  daemonize.c  hpcperfstatsd  nvidia_gpu.c  nvidia_gpu.h  stats_buffer.c
services-conf/: django_startup.sh  logrotate.conf  logrotate.sh  nginx-withssl.conf  rsync_acct.sh  rsync_data.sh  rsync_data.sh.example  supervisor_startup.sh  supervisord.conf  supervisord.conf.example  syslog-ng.conf
