[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpcperfstats"
version = "3.0"
description = "A performance monitoring and analysis package for High Performance Computing Platforms"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Texas Advanced Computing Center", email = "sharrell@tacc.utexas.edu" },
]
urls = { homepage = "http://www.tacc.utexas.edu", repository = "https://github.com/TACC/hpcperfstats" }

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "psycopg",
  "pandas",
  "bokeh==3.8.2",
  "Django~=6.0",
  "python-hostlist",
  "pika",
  "mysqlclient",
  "gunicorn",
  "requests",
  "pytz",
  "tzdata",
  "redis",
  "djangorestframework",
  "django-cors-headers",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-django>=4.5",
  "pytest-cov>=4.0",
]
dev = [
  "yapf",  # Google style formatter
]

[tool.pytest.ini_options]
testpaths = ["hpcperfstats"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
markers = [
  "django: marks tests requiring Django (dbs, settings).",
]

[tool.setuptools]
script-files = [
  "hpcperfstats/analysis/metrics/update_metrics.py",
  "hpcperfstats/site/manage.py",
  "hpcperfstats/dbload/sacct_gen.py",
  "hpcperfstats/dbload/sync_acct.py",
  "hpcperfstats/dbload/sync_timedb.py",
  "hpcperfstats/dbload/sync_timedb_archive.py",
  "hpcperfstats/listend.py",
  "hpcperfstats/jobstats_cli.py",
]

[tool.setuptools.packages.find]
include = ["hpcperfstats*"]

[tool.setuptools.package-data]
hpcperfstats = ["cfg.py"]

[tool.ruff]
target-version = "py312"
line-length = 80  # Google style guide
extend-exclude = [
  "migrations",
  ".venv",
  "env",
  ".git",
  "__pycache__",
  ".ruff*",
  ".tools",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # flake8-bugbear
  "W",  # pycodestyle warnings
]
ignore = [
  # Add specific rule codes here if Ruff is too strict somewhere.
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
